--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
+@import "alertBox/alertBox.css";
 
 :root {
   --mainFont: "Poppins", sans-serif;
@@ -17,10 +18,14 @@
   --buttonBg: #000;
   --buttonRedBg: #af4c50;
   --buttonGreenBg: #4caf50;
+  --alertBoxBg: #f12e2e;
+  --alertBoxColor: #fff;
+  --alertBoxBoxShadowColor: rgba(0, 0, 0, 0.3);
 
   /* BOX SHADOWS */
   --appBoxShadow: 0 0 10px var(--appBoxShadowColor),
     0 0 100px var(--appBoxShadowColor);
+  --alertBoxBoxShadow: 10px 10px 20px var(--alertBoxBoxShadowColor);
 }
 
 * {
